<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
      name="viewmodel"
      type="org.markensic.emqx.viewmodels.ConnectViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    android:paddingTop="26dp"
    tools:context="org.markensic.emqx.client.ui.ClientConnectActivity">

    <TextView
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/app_name"
      android:textSize="30sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginBottom="10dp"
      android:fillViewport="true"
      app:layout_constraintBottom_toTopOf="@+id/connect"
      app:layout_constraintTop_toBottomOf="@+id/title">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <org.markensic.emqx.client.widget.MaterialEditText
          android:id="@+id/name"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:hint="@string/mqtt_name"
          android:singleLine="true"
          android:text="@={viewmodel.name}"
          android:textSize="18sp"
          app:floatLabelSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <org.markensic.emqx.client.widget.MaterialEditText
          android:id="@+id/client_id"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:hint="@string/mqtt_client_id"
          android:singleLine="true"
          android:text="@={viewmodel.clientId}"
          android:textSize="18sp"
          app:floatLabelSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/name" />

        <org.markensic.emqx.client.widget.MaterialEditText
          android:id="@+id/address"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:hint="@string/mqtt_address"
          android:singleLine="true"
          android:text="@={viewmodel.address}"
          android:textSize="18sp"
          app:floatLabelSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/client_id" />

        <org.markensic.emqx.client.widget.MaterialEditText
          android:id="@+id/user"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:hint="@string/mqtt_user_hint"
          android:singleLine="true"
          android:text="@={viewmodel.user}"
          android:textSize="18sp"
          app:floatLabelSize="16sp"
          app:floatLabelText="@string/mqtt_user"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/address" />

        <org.markensic.emqx.client.widget.MaterialEditText
          android:id="@+id/password"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:hint="@string/mqtt_password_hint"
          android:singleLine="true"
          android:text="@={viewmodel.password}"
          android:textSize="18sp"
          app:floatLabelSize="16sp"
          app:floatLabelText="@string/mqtt_password"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/user" />

        <org.markensic.emqx.client.widget.MaterialEditText
          android:id="@+id/keep_alive"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:hint="@string/mqtt_keep_alive_hint"
          android:inputType="number"
          android:singleLine="true"
          android:text="@={viewmodel.keepAlive}"
          android:textSize="18sp"
          app:floatLabelSize="16sp"
          app:floatLabelText="@string/mqtt_keep_alive"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
          android:id="@+id/pre_clean_session"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="5dp"
          android:layout_marginTop="5dp"
          android:text="@string/mqtt_clean_session"
          android:textSize="18sp"
          app:layout_constraintEnd_toStartOf="@+id/clean_session"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/keep_alive" />

        <CheckBox
          android:id="@+id/clean_session"
          android:layout_width="wrap_content"
          android:layout_height="0dp"
          android:layout_marginEnd="5dp"
          android:checked="@={viewmodel.cleanSession}"
          app:layout_constraintBottom_toBottomOf="@+id/pre_clean_session"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/pre_clean_session"
          app:layout_constraintTop_toTopOf="@+id/pre_clean_session" />

        <TextView
          android:id="@+id/pre_enable_tls"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="5dp"
          android:layout_marginTop="10dp"
          android:text="@string/mqtt_enable_tls"
          android:textSize="18sp"
          app:layout_constraintBottom_toTopOf="@+id/verify_group"
          app:layout_constraintEnd_toStartOf="@+id/enable_tls"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/pre_clean_session" />

        <CheckBox
          android:id="@+id/enable_tls"
          android:layout_width="wrap_content"
          android:layout_height="0dp"
          android:layout_marginEnd="5dp"
          android:checked="@={viewmodel.enableTls}"
          app:layout_constraintBottom_toBottomOf="@+id/pre_enable_tls"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/pre_enable_tls"
          app:layout_constraintTop_toTopOf="@+id/pre_enable_tls" />

        <RadioGroup
          android:id="@+id/verify_group"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:orientation="horizontal"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/pre_enable_tls">

          <RadioButton
            android:id="@+id/one_way_certification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/one_way_certification"
            android:textSize="16sp" />

          <RadioButton
            android:id="@+id/two_way_certification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:maxLines="1"
            android:text="@string/two_way_certification"
            android:textSize="16sp" />

        </RadioGroup>

        <org.markensic.emqx.client.widget.MaterialEditText
          android:id="@+id/ca"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:focusable="false"
          android:hint="@string/mqtt_ca"
          android:singleLine="true"
          android:text="@={viewmodel.ca}"
          android:textSize="18sp"
          app:floatLabelSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/verify_group" />

        <org.markensic.emqx.client.widget.MaterialEditText
          android:id="@+id/client_pem"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:focusable="false"
          android:hint="@string/mqtt_client_pem"
          android:singleLine="true"
          android:text="@={viewmodel.clientPem}"
          android:textSize="18sp"
          app:floatLabelSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/ca" />

        <org.markensic.emqx.client.widget.MaterialEditText
          android:id="@+id/client_key"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:focusable="false"
          android:hint="@string/mqtt_client_key"
          android:singleLine="true"
          android:text="@={viewmodel.clientKey}"
          android:textSize="18sp"
          app:floatLabelSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/client_pem" />

        <androidx.constraintlayout.widget.Group
          android:id="@+id/group_tls"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:constraint_referenced_ids="ca, client_key, client_pem, verify_group" />

      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
      android:id="@+id/connect"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="20dp"
      android:text="@string/connect"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>